--- a/test/NuGet.Server.Tests/packages.config
+++ b/test/NuGet.Server.Tests/packages.config
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
-  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net46" />
-  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net46" />
-  <package id="Microsoft.Data.Services" version="5.7.0" targetFramework="net46" />
-  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net46" />
+  <package id="Castle.Core" version="4.1.1" targetFramework="net46" />
+  <package id="Microsoft.Data.Edm" version="5.8.1" targetFramework="net46" />
+  <package id="Microsoft.Data.OData" version="5.8.1" targetFramework="net46" />
+  <package id="Microsoft.Data.Services" version="5.8.1" targetFramework="net46" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.1" targetFramework="net46" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net46" />
-  <package id="Moq" version="4.5.8" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="Moq" version="4.7.99" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net46" />
-  <package id="System.Spatial" version="5.7.0" targetFramework="net46" />
-  <package id="xunit" version="2.1.0" targetFramework="net46" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.assert" version="2.1.0" targetFramework="net46" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net46" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net46" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net46" />
-  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net46" />
+  <package id="System.Spatial" version="5.8.1" targetFramework="net46" />
+  <package id="xunit" version="2.2.0" targetFramework="net46" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net46" />
+  <package id="xunit.assert" version="2.2.0" targetFramework="net46" />
+  <package id="xunit.core" version="2.2.0" targetFramework="net46" />
+  <package id="xunit.extensibility.core" version="2.2.0" targetFramework="net46" />
+  <package id="xunit.extensibility.execution" version="2.2.0" targetFramework="net46" />
+  <package id="xunit.runner.visualstudio" version="2.2.0" targetFramework="net46" developmentDependency="true" />
 </packages>
